<resources>
    <string name="app_name">Expenses View</string>

    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>

    <string name="fill_data_title">Enter Expense Data</string>
    <string name="id">User id</string>
    <string name="amount">Amount</string>
    <string name="particulars">Particulars</string>
    <string name="isGroup">Is it Group expense?</string>
    <string name="dated">Dated (dd-mm-yyyy)</string>
    <string name="submit">Submit</string>

    <!-- Register Activity Strings -->
    <string name="register_screen_title">Register User</string>
    <string name="register">Register</string>

    <!-- Login Activity Strings -->
    <string name="login_screen_title">Login User</string>
    <string name="login">Login</string>

    <string name="user_name">User Name</string>
    <string name="password">Password</string>
</resources>
