<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin" tools:context=".MainActivity">

    <TextView android:text="@string/fill_data_title"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:textSize="25sp"
        android:textStyle="bold"
        android:id="@+id/title" />

    <TextView
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/id"
        android:id="@+id/tv_user_id"
        android:layout_below="@+id/title"
        android:layout_alignParentLeft="true" />

    <EditText
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:id="@+id/userid"
        android:layout_below="@+id/tv_user_id"
        android:layout_alignParentLeft="true"
        android:hint="Enter user id"
        android:maxLength="2"
        android:inputType="number" />

    <TextView
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/amount"
        android:id="@+id/tv_amount"
        android:layout_below="@+id/userid"
        android:layout_alignParentLeft="true" />

    <EditText
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:id="@+id/amount"
        android:layout_below="@+id/tv_amount"
        android:layout_alignParentLeft="true"
        android:hint="Enter amount"
        android:inputType="numberDecimal"
        android:numeric="decimal" />

    <TextView
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/particulars"
        android:id="@+id/tv_password"
        android:layout_below="@+id/amount"
        android:layout_alignParentLeft="true" />

    <EditText
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:id="@+id/password"
        android:hint="Enter particulars"
        android:layout_below="@+id/tv_password"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <TextView
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/isGroup"
        android:id="@+id/tv_group"
        android:layout_below="@+id/password"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true" />

    <EditText
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:id="@+id/isgroup"
        android:hint="Is it a group expense?"
        android:layout_below="@+id/tv_group"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:inputType="number"
        android:numeric="integer" />

    <TextView
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/dated"
        android:id="@+id/tv_dated"
        android:layout_below="@+id/isgroup"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true" />

    <EditText
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:id="@+id/dated"
        android:hint="Date of expense"
        android:layout_below="@+id/tv_dated"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:inputType="date" />

    <TextView
        android:id="@+id/login_error"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:padding="10dip"
        android:textColor="#e30000"
        android:textStyle="bold" />

    <Button
        style="?android:attr/buttonStyleSmall"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/submit"
        android:id="@+id/btn_submit"
        android:layout_below="@+id/dated"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="40dp"
        android:onClick="submitExpenseData" />

</RelativeLayout>
