<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin" tools:context=".MainActivity">

    <TextView android:text="@string/register_screen_title"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:textSize="25sp"
        android:textStyle="bold"
        android:id="@+id/title"
        android:textAlignment="center" />

    <TextView
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/user_name"
        android:id="@+id/tv_user_name"
        android:layout_below="@+id/login_error"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:layout_marginTop="42dp" />

    <EditText
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:id="@+id/user_name"
        android:hint="Enter User Name"
        android:inputType="text"
        android:layout_below="@+id/tv_user_name"
        android:layout_alignParentRight="true" />

    <TextView
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/password"
        android:id="@+id/tv_password"
        android:layout_below="@+id/user_name"
        android:layout_alignParentRight="true" />

    <EditText
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:inputType="textPassword"
        android:id="@+id/password"
        android:hint="Enter Password"
        android:layout_below="@+id/tv_password"
        android:layout_alignParentRight="true"
         />

    <TextView
        android:id="@+id/login_error"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:padding="10dip"
        android:textColor="#e30000"
        android:textStyle="bold"
        android:layout_below="@+id/password"/>

    <Button
        style="?android:attr/buttonStyleSmall"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/register"
        android:id="@+id/btn_submit"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="40dp"
        android:onClick="submitRegisterData"
        android:layout_below="@+id/password" />



</RelativeLayout>
